fix: number task inputs not expanding when editing number task style: update dark mode styles style: change list view sizing etc style: change home padding

--- a/client/src/pages/Home/Home.module.scss
+++ b/client/src/pages/Home/Home.module.scss
@@ -24,6 +24,7 @@
 
 @media (max-width: v.$tablet-breakpoint) {
   .leftSide {
-    padding-top: 1em;
+    width: 100%;
+    padding: 1em 4px 0 4px;
   }
 }
