--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -3,13 +3,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    --red-color: #FC5C65;
-    --orange-color: #FD9644;
-    --yellow-color: #FED330;
-    --green-color: #26DE81;
-    --light-blue-color: #45AAF2;
-    --blue-color: #4B7BEC;
-    --purple-color: #A55EEA;
     --overlay-color: rgba(0, 0, 0, 0.4);
 }
 
